Fixed h2-spacing bug and h2 line-height bug

--- a/css/override.css
+++ b/css/override.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6
 {
 	font-family: 'Ubuntu', 'Arial', sans-serif;
 	font-weight: 700;
+	line-height: 1em;
 }
 
 .button
@@ -35,7 +36,6 @@ h1, h2, h3, h4, h5, h6
 
 .h2-break
 {
-	display: block;
 	height: 4.2em;
 }
 
